add_subdirectory(logging)

add_subdirectory(cpps)
add_subdirectory(minhton-ns3)
add_subdirectory(natter-ns3)
add_subdirectory(network_tcp)
add_subdirectory(manager)
#add_subdirectory(path_planning)
add_subdirectory(sola-ns3)
add_subdirectory(solanet-ns3)
add_subdirectory(utils)
add_subdirectory(datastructure)
add_subdirectory(material_flow)
