include(minhton_tests)

add_minhton_test(TEST message_header_test SOURCE message_header_test.cpp LINKING minhton_message minhton_utils_uuid)
# addTest(TEST logging_test SOURCE logging_test.cpp LINKING minhton_logging dl pthread minhton_exception)
add_minhton_test(TEST message_test SOURCE message_test.cpp LINKING minhton_message)
add_minhton_test(TEST network_info_test SOURCE network_info_test.cpp LINKING minhton_core_network_info)
add_minhton_test(TEST logical_node_info_test SOURCE logical_node_info_test.cpp LINKING minhton_core_constants minhton_core_logical_node_info)
add_minhton_test(TEST node_info_test SOURCE node_info_test.cpp LINKING minhton_core_node_info)
add_minhton_test(TEST routing_calculations_test SOURCE routing_calculations_test.cpp LINKING minhton_core_constants minhton_core_routing_calculations)
add_minhton_test(TEST routing_information_test SOURCE routing_information_test.cpp LINKING minhton_core_routing_table)
add_minhton_test(TEST routing_information_table_test SOURCE routing_information_table_test.cpp LINKING minhton_core_routing_table)
add_minhton_test(TEST routing_information_general_helper_test SOURCE routing_information_general_helper_test.cpp LINKING minhton_core_routing_table)
add_minhton_test(TEST procedure_info_test SOURCE procedure_info_test.cpp LINKING minhton_utils_procedure_info minhton_core_node_info minhton_exception_algorithm)
add_minhton_test(TEST serializer_test SOURCE serializer_test.cpp LINKING minhton_message minhton_utils_serializer_cereal)
add_minhton_test(TEST fsm_test SOURCE fsm_test.cpp LINKING minhton_fsm)
add_minhton_test(TEST fuzzy_value_test SOURCE fuzzy_value_test.cpp LINKING minhton_algorithms)
add_minhton_test(TEST find_query_test SOURCE find_query_test.cpp LINKING minhton_algorithms)
add_minhton_test(TEST boolean_expression_test SOURCE boolean_expression_test.cpp LINKING minhton_algorithms)
# addTest(TEST node_data_test SOURCE node_data_test.cpp LINKING minhton_algorithms)
add_minhton_test(TEST dsn_handler_test SOURCE dsn_handler_test.cpp LINKING minhton_algorithms)
add_minhton_test(TEST algorithm_search_exact_test SOURCE algorithm_search_exact_test.cpp LINKING minhton_algorithms minhton_message)
add_minhton_test(TEST algorithm_join_accept_test SOURCE algorithm_join_accept_test.cpp LINKING minhton_algorithms minhton_message minhton_logging)
add_minhton_test(TEST algorithm_leave_helper_test SOURCE algorithm_leave_helper_test.cpp LINKING minhton_algorithms minhton_message)
add_minhton_test(TEST algorithm_bootstrap_test SOURCE algorithm_bootstrap_test.cpp LINKING minhton_algorithms)
add_minhton_test(TEST algorithm_response_test SOURCE algorithm_response_test.cpp LINKING minhton_algorithms)
#addTest(TEST utils_event_id_test SOURCE utils_generate_event_id.cpp LINKING Message Utils Core)

if (MINHTON_BUILD_SINGLE_TEST_BINARY)
    set(test_sources "")
    set(test_linking "")
    foreach(test IN LISTS minhton_test_list)
        list(APPEND test_sources ${MINHTON_TEST_${test}_SOURCE})
        list(APPEND test_linking ${MINHTON_TEST_${test}_LINKING})
    endforeach()
    add_executable(MinhtonAllTests ${test_sources})
    target_link_libraries(MinhtonAllTests PUBLIC ${test_linking})
    target_include_directories(MinhtonAllTests PRIVATE ${MINHTON_SOURCE_DIR}/include/minhton) # Access private headers
else()
    foreach(test IN LISTS minhton_test_list)
        add_executable(${test} ${MINHTON_TEST_${test}_SOURCE})
        target_link_libraries(${test} PUBLIC ${MINHTON_TEST_${test}_LINKING})
        target_include_directories(${test} PRIVATE ${MINHTON_SOURCE_DIR}/include/minhton) # Access private headers
    endforeach()
endif()
